<?xml version="1.0" encoding="utf-8"?>
<com.example.android.architecture.blueprints.beetv.widgets.metro.DrawingOrderRelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main"
    android:layout_width="360dp"
    android:layout_height="wrap_content"
    android:focusable="false"
    android:clipChildren="false"
    android:gravity="center"
    android:background="@drawable/bg_black_opacity_stroke_black_2">


    <TextView
        android:id="@+id/tv_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/size_50"
        android:gravity="center"
        android:focusable="false"

        android:text="@string/are_you_sure_you_want_to_log_out"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/white" />


    <com.example.android.architecture.blueprints.beetv.widgets.metro.MetroItemFrameLayout
        android:id="@+id/bt_confirm"
        android:layout_width="@dimen/size_120"
        android:layout_height="56dp"
        android:layout_below="@+id/tv_title"
        android:layout_marginTop="@dimen/size_50"
        android:layout_marginBottom="@dimen/size_50"
        android:layout_marginStart="@dimen/size_50"
        android:background="@color/mineShaft"
        android:focusable="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:focusable="false"
            android:text="@string/confirm"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/white" />
    </com.example.android.architecture.blueprints.beetv.widgets.metro.MetroItemFrameLayout>


    <com.example.android.architecture.blueprints.beetv.widgets.metro.MetroItemFrameLayout
        android:id="@+id/bt_cancel"
        android:layout_width="@dimen/size_120"
        android:layout_height="56dp"
        android:layout_below="@+id/tv_title"
        android:layout_marginStart="@dimen/size_20"
        android:layout_marginTop="@dimen/size_50"
        android:layout_toEndOf="@+id/bt_confirm"
        android:background="@color/mineShaft"
        android:focusable="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:focusable="false"
            android:text="@string/cancel"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/white" />
    </com.example.android.architecture.blueprints.beetv.widgets.metro.MetroItemFrameLayout>

</com.example.android.architecture.blueprints.beetv.widgets.metro.DrawingOrderRelativeLayout>