<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/container"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.example.android.architecture.blueprints.beetv.modules.player.components.ExoVideoView
        android:id="@+id/exoplay"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:gravity="center"
        android:focusable="false"
        android:id="@+id/exitLayout"
        android:visibility="gone"
        android:background="#A1000000"
        android:layout_height="match_parent">

        <Button
            android:layout_width="@dimen/size_165"
            android:layout_height="@dimen/size_60"
            android:id="@+id/bt_exit"
            android:textColor="@color/white"
            android:nextFocusRight="@id/bt_cancel"
            android:nextFocusDown="@id/bt_exit"
            android:nextFocusUp="@id/bt_exit"
            android:nextFocusLeft="@id/bt_exit"
            android:background="@drawable/button_red"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:text="@string/exit"/>


        <Button
            android:layout_width="@dimen/size_165"
            android:layout_height="@dimen/size_60"
            android:nextFocusDown="@id/bt_cancel"
            android:nextFocusUp="@id/bt_cancel"
            android:nextFocusRight="@id/bt_cancel"
            android:nextFocusLeft="@id/bt_exit"
            android:background="@drawable/button_red"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:layout_marginStart="@dimen/size_20"
            android:textColor="@color/white"
            android:id="@+id/bt_cancel"
            android:text="@string/cancel"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:gravity="center"
        android:focusable="false"
        android:id="@+id/resumeLayout"
        android:visibility="gone"
        android:background="#4D000000"
        android:orientation="vertical"
        android:layout_height="match_parent">


        <ImageView
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:id="@+id/iv_loading"
            android:src="@drawable/loading"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_movie_name"
            android:textColor="@color/alto"
            android:layout_margin="@dimen/size_20"
            android:focusable="false"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_speed"
            android:textColor="@color/alto"
            android:layout_margin="@dimen/size_20"
            android:focusable="false"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
           />

        <LinearLayout
            android:layout_width="wrap_content"
            android:orientation="horizontal"
            android:layout_height="wrap_content">

            <Button
                android:layout_width="@dimen/size_250"
                android:layout_height="56dp"
                android:id="@+id/bt_resume"
                android:textColor="@color/white"
                android:nextFocusRight="@id/bt_from_start"
                android:nextFocusDown="@id/bt_resume"
                android:nextFocusUp="@id/bt_resume"
                android:nextFocusLeft="@id/bt_resume"
                android:background="@drawable/button_red"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:text="@string/play_from_you_end"/>


            <Button
                android:layout_width="@dimen/size_250"
                android:layout_height="56dp"
                android:nextFocusDown="@id/bt_from_start"
                android:nextFocusUp="@id/bt_from_start"
                android:nextFocusRight="@id/bt_from_start"
                android:nextFocusLeft="@id/bt_resume"
                android:background="@drawable/button_red"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:layout_marginStart="@dimen/size_20"
                android:textColor="@drawable/text_tv_button"
                android:id="@+id/bt_from_start"
                android:text="@string/play_from_you_start"/>
        </LinearLayout>

    </LinearLayout>
</FrameLayout>