<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <import type="android.view.View" />

        <import type="androidx.core.content.ContextCompat" />

        <variable
            name="click"
            type="com.example.android.architecture.blueprints.beetv.modules.login.LoginFragment.ClickProxy" />

        <variable
            name="viewmodel"
            type="com.example.android.architecture.blueprints.beetv.modules.login.LoginViewModel" />

    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/container"
        android:focusable="false">

        <com.example.android.architecture.blueprints.beetv.widgets.metro.DrawingOrderRelativeLayout
            android:id="@+id/main"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:background="@drawable/bg_black_opacity_stroke_black_2"
            android:clipChildren="false"
            android:focusable="false"
            android:gravity="center"
            android:padding="@dimen/size_50">


            <TextView
                android:id="@+id/tv_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:focusable="false"
                android:text="@string/login"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@color/white" />

            <TableLayout
                android:id="@+id/layoutEditText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_title"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/size_16"
                android:focusable="false">

                <TableRow android:gravity="center_vertical">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:focusable="false"
                        android:gravity="end"
                        android:text="@string/id"
                        android:textAppearance="@style/TextAppearance.AppCompat.Small"
                        android:textColor="@color/white" />

                    <FrameLayout
                        android:layout_width="@dimen/size_300"
                        android:layout_height="@dimen/size_40"
                        android:focusable="false"
                        android:layout_marginStart="@dimen/size_20"
                        android:background="@color/alto">
                        <EditText
                            android:id="@+id/etID"
                            android:layout_width="@dimen/size_300"
                            android:layout_height="@dimen/size_40"
                            android:inputType="textEmailAddress"
                            android:paddingHorizontal="@dimen/size_16"
                            android:text="@={viewmodel.id}"
                            android:background="@color/button_text_focus"
                            android:textAppearance="@style/TextAppearance.AppCompat.Small"
                            android:textColor="@color/black" />
                    </FrameLayout>

                </TableRow>

                <TableRow android:layout_marginTop="@dimen/size_8" android:gravity="center_vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:focusable="false"
                        android:text="@string/password"
                        android:textAppearance="@style/TextAppearance.AppCompat.Small"
                        android:textColor="@color/white" />
                    <FrameLayout
                        android:layout_width="@dimen/size_300"
                        android:layout_height="@dimen/size_40"
                        android:focusable="false"
                        android:layout_marginStart="@dimen/size_20"
                        android:background="@color/alto">
                    <EditText
                        android:layout_width="@dimen/size_300"
                        android:layout_height="@dimen/size_40"
                        android:inputType="textPassword"
                        android:background="@color/button_text_focus"
                        android:paddingHorizontal="@dimen/size_16"
                        android:text="@={viewmodel.password}"
                        android:textAppearance="@style/TextAppearance.AppCompat.Small"
                        android:textColor="@color/black" /></FrameLayout>
                </TableRow>
            </TableLayout>

            <com.example.android.architecture.blueprints.beetv.widgets.metro.MetroItemFrameLayout
                android:id="@+id/bt_login"
                android:layout_width="@dimen/size_120"
                android:layout_height="48dp"
                android:layout_below="@+id/layoutEditText"
                android:layout_marginStart="65dp"
                android:layout_marginTop="28dp"
                android:background="@color/button_text_focus"
                android:focusable="true"
                android:onClick="@{()->click.login()}">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:focusable="false"
                    android:text="@string/login"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                    android:textColor="@color/white" />
            </com.example.android.architecture.blueprints.beetv.widgets.metro.MetroItemFrameLayout>


            <com.example.android.architecture.blueprints.beetv.widgets.metro.MetroItemFrameLayout
                android:id="@+id/bt_cancel"
                android:layout_width="@dimen/size_120"
                android:layout_height="48dp"
                android:layout_below="@+id/layoutEditText"
                android:layout_marginStart="@dimen/size_20"
                android:layout_marginTop="28dp"
                android:layout_toEndOf="@+id/bt_login"
                android:background="@color/button_text_focus"
                android:focusable="true"
                android:onClick="@{()->click.cancel()}">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:focusable="false"
                    android:text="@string/cancel"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                    android:textColor="@color/white" />
            </com.example.android.architecture.blueprints.beetv.widgets.metro.MetroItemFrameLayout>

        </com.example.android.architecture.blueprints.beetv.widgets.metro.DrawingOrderRelativeLayout>

    </RelativeLayout>
</layout>

